feat: Single Recipe Page

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^16.0.1",
     "contentful": "^11.5.20",
     "next": "15.3.2",
     "react": "^19.0.0",
@@ -22,6 +23,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "sass": "^1.87.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
